tests/snapshot/inputs/errors/value_contract_violation.ncl
{ foo | std.FailWith "no reason" = 1 }.foo

